--- a/app/package.json
+++ b/app/package.json
@@ -13,7 +13,8 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "jquery": "^4.0.0",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "mysql": "^2.18.1"
   },
   "devDependencies": {
     "jest": "^30.2.0",
